@@ -126,6 +126,9 @@ allprojects {
             dependsOn(':installGitHooks')
             sourceCompatibility = 8
             targetCompatibility = 8
+            // Because the target is 8, all of the public compiler classes are accessible, so
+            // --add-exports are not required, (nor are they allowed with target 8). See
+            // https://openjdk.java.net/jeps/247 for details on compiling for older versions.
 
             // When sourceCompatibilty is changed to 11, then the following will be required.
             // options.compilerArgs += [
@@ -139,6 +142,20 @@ allprojects {
             // "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
             // "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
             // ]
+            // This is equivalent to writing "exports jdk.compiler/... to ALL-UNNAMED" in the
+            // module-info.java of jdk.compiler, so corresponding --add-opens are only required for
+            // reflective access to private members.
+            //
+            // From https://openjdk.java.net/jeps/261, Section titled: "Breaking encapsulation"
+            // "The effect of each instance [of --add-exports] is to add a qualified export of the
+            // named package from the source module to the target module. This is, essentially, a
+            // command-line form of an exports clause in a module declaration[...].
+            // [...]
+            // The --add-exports option enables access to the public types of a specified package.
+            // It is sometimes necessary to go further and enable access to all non-public elements
+            // via the setAccessible method of the core reflection API. The --add-opens option can
+            // be used, at run time, to do this."
+
             options.failOnError = true
             options.deprecation = true
             options.compilerArgs += [
@@ -552,17 +569,23 @@ subprojects {
                                 "-javacoptions:-source 8",
                                 "-javacoptions:-target 8"
                                 ]
+                            if (project.name.is('checker')) {
+                                args += [
+                                        "-javacoptions:-Xbootclasspath/p:${projectDir}/dist/jdk8.jar",
+                                ]
+                            }
+                        } else {
+                            args += [
+                                    // checker/jtreg/nullness/defaultsPersist/ReferenceInfoUtil.java
+                                    // uses the jdk.jdeps module.
+                                    "-javacoptions:--add-modules jdk.jdeps",
+                                    "-javacoptions:--add-exports=jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED",
+                            ]
                         }
                         if (project.name.is('framework')) {
                             // Do not check for the annotated JDK
                             args += [
                                     "-javacoptions:-Anocheckjdk"
-                            ]
-                        }
-                        if (isJava8 && project.name.is('checker')) {
-                            // TODO: enable annotated JDK on Java 9+
-                            args += [
-                                    "-javacoptions:-Xbootclasspath/p:${projectDir}/dist/jdk8.jar",
                             ]
                         }
 
@@ -584,10 +607,15 @@ subprojects {
 
         // Configure JUnit tests
         tasks.withType(Test) {
-            if (!isJava8) {
+            if (isJava8) {
+                jvmArgs "-Xbootclasspath/p:${configurations.javacJar.asPath}"
+            } else {
+                // Without this, the test throw "java.lang.OutOfMemoryError: Java heap space"
+                forkEvery(1)
                 jvmArgs += [
-                    "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"
-                    ]
+                        "--illegal-access=warn",
+                        "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                ]
             }
 
             if (project.name.is('checker')) {
@@ -597,10 +625,6 @@ subprojects {
 
             if (project.hasProperty('emit.test.debug')) {
                 systemProperties += ["emit.test.debug": 'true']
-            }
-
-            if (isJava8) {
-                jvmArgs "-Xbootclasspath/p:${configurations.javacJar.asPath}"
             }
 
             testLogging {
